# microtimer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: microtimerConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  ISSUES.md  PORTING_GUIDE.md  VERIFICATION.md
include/: mtimer.h  mtimer_config.h  mtimer_config.h.in
src/: mtimer.c
tests/: CMakeLists.txt  Makefile  test_all.c  test_harness.h
tests/add_subdirectory_consumer/: CMakeLists.txt  main.c
tests/compile_fail/: CMakeLists.txt  max_timers_256.c  max_timers_negative.c  max_timers_too_large.c  max_timers_zero.c
tests/consumers/: c_consumer.c  cpp_consumer.cpp
tests/find_package_consumer/: CMakeLists.txt  main.c
